<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">Good Lock Credit</string>
    <string name="activate">Activate</string>
    <string name="add_review"><u>Write a review</u></string>
    <string name="add_shortcut">Add to Home screen</string>
    <string name="alicia">Alicia</string>
    <string name="alicia_comment">"Hi~ I am Alicia C.
Your phone is you. Show your own style through our Good Lock app."</string>
    <string name="all">All</string>
    <string name="allow">Allow</string>
    <string name="allow_connection">Allow network connections?</string>
    <string name="allow_connection_descriptions">"Good Lock needs to use a network connection to work normally.

Data will be transferred in the background while your tablet is connected to a mobile network or WLAN.

If you allow a network connection, this message won't be shown again."</string>
    <string name="announcement">News</string>
    <string name="app_name">Good Lock</string>
    <string name="appbar_base_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brandon">Brandon</string>
    <string name="brandon_comment">GoodLock Goodluck</string>
    <string name="cancel">Cancel</string>
    <string name="change_tab_order">Change tab order</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cheer_msg_count">%d cheering messages</string>
    <string name="chip_text">Chip text</string>
    <string name="cindy">Cindy</string>
    <string name="cindy_comment">Hello~ I am Cindy. I love all of you, Good Lock users. I ask for your continued interest and love for Good Lock~</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="contact_us"><u>Contact us</u></string>
    <string name="crossfieldz">Crossfieldz</string>
    <string name="crossfieldz_msg">"Retro animation dev. Thx for watching. let's go back to the future..."</string>
    <string name="deny">Deny</string>
    <string name="dhwang">DHWANG</string>
    <string name="dhwang_msg">Sometimes being retro is better.</string>
    <string name="diary">Diary</string>
    <string name="dragndroplist_drag_move">Now at position %d.</string>
    <string name="dragndroplist_drag_release">Item dropped into position %d.</string>
    <string name="dragndroplist_drag_start">Started dragging item at position %d.</string>
    <string name="dragndroplist_item_cannot_be_dragged">Item at position %d cannot be dragged.</string>
    <string name="dream_ph_body_contact_p1sscustomer_servicep2ss_for_more_information_n_nerror_code_c_p3ss">"Contact %1$sCustomer Service%2$s for more information.

Error code: %3$s"</string>
    <string name="dream_ph_body_to_complete_this_purchase_you_need_to_enable_the_galaxy_store_in_settings">To complete this purchase, you need to enable the Galaxy Store in Settings.</string>
    <string name="dream_ph_body_to_complete_this_purchase_you_need_to_update_the_galaxy_store">To complete this purchase, you need to update the Galaxy Store.</string>
    <string name="dream_ph_pheader_couldnt_complete_purchase">"Couldn't complete purchase"</string>
    <string name="dream_sapps_body_authenticating_ing">Authenticating...</string>
    <string name="dream_sapps_body_contact_customer_service_to_complete_your_purchase">Contact Customer Service to complete your purchase.</string>
    <string name="dream_sapps_body_your_purchase_is_complete">Your purchase is complete.</string>
    <string name="drop">Drop</string>
    <string name="edit">Edit</string>
    <string name="end_date">End date</string>
    <string name="err_msg_account_not_existed">Account is not existed. Please add account first.</string>
    <string name="err_msg_tray_later">Error is occurred. Try again later.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="family">Family</string>
    <string name="finish">Finish</string>
    <string name="go_to_store">Go to store</string>
    <string name="good_lock_apps">Learn more about features</string>
    <string name="goodlock_cheering">Cheering</string>
    <string name="goodlock_exit_msg">Are you sure you want to quit Good Lock?</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="ids_com_body_error_code_c">Error code:</string>
    <string name="incubating">Incubating</string>
    <string name="incubating_comment">Sally BEST!! BEST!!</string>
    <string name="information">Terrace</string>
    <string name="installed">"You've got it!"</string>
    <string name="item_view_role_description">Tab</string>
    <string name="j_jeon">J JEON</string>
    <string name="j_jeon_msg">"Daddy's daughter"</string>
    <string name="jeong">Yeongseog Jeong</string>
    <string name="jeong_comment">"I don't know who you are but, i will find you and i will thanks you. Good lock."</string>
    <string name="jin">Jin</string>
    <string name="jin_comment">"I'm really working on this. Please support Good Lock."</string>
    <string name="joe_comment">Hello. I am in charge of the TM role. Please enjoy Good Lock.</string>
    <string name="latest">Latest</string>
    <string name="life_up">Life up</string>
    <string name="make_up">Make up</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="mids_sapps_body_waiting_ing">Waiting...</string>
    <string name="mids_sapps_header_samsung_in_app_purchase_abb">Samsung In-App Purchase</string>
    <string name="mids_sapps_header_update_galaxy_apps">Update Galaxy Apps</string>
    <string name="mids_sapps_pop_a_new_version_is_available_galaxy_apps_will_be_updated_to_the_latest_version_to_complete_this_purchase">A new version is available. Galaxy Apps will be updated to the latest version to complete this purchase.</string>
    <string name="mids_sapps_pop_an_invalid_value_has_been_provided_for_samsung_in_app_purchase">An invalid value has been provided for Samsung In-App Purchase.</string>
    <string name="mids_sapps_pop_payment_canceled">Payment cancelled.</string>
    <string name="mids_sapps_pop_to_purchase_items_you_need_to_install_samsung_in_app_purchase_install_q">To purchase items, you need to install Samsung In-App Purchase. Install?</string>
    <string name="mids_sapps_pop_unable_to_open_samsung_in_app_purchase_msg">Unable to open Samsung In-App Purchase. Go to Permissions, then allow the required permissions and try again.</string>
    <string name="mids_sapps_pop_unknown_error_occurred">Unknown error occurred.</string>
    <string name="more">More</string>
    <string name="msg_app_version_low">The version of this app is out of date. Update from the Galaxy Store!</string>
    <string name="msg_go_to_store">Go to the store according to the policy.</string>
    <string name="msg_prevent_execution">The app cannot be run by policy.</string>
    <string name="msg_server_maintenance">"Terrace Server is under maintenance.
 Message:"</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="notice">Notice</string>
    <string name="open_source_license"><u>Open source license</u></string>
    <string name="poll">Poll</string>
    <string name="privacy_policy"><u>Privacy Notice</u></string>
    <string name="progress">Progress</string>
    <string name="terms_short"><u>Terms of service</u></string>
    <string name="tips">Tips</string>
    <string name="withdraw_consent"><u>Leave Good Lock</u></string>
</resources>