<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/main_view" android:tag="layout/activity_about_0" android:background="@color/colorBg" android:paddingTop="24.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" android:background="@color/colorBg" android:layout_width="match_parent" android:layout_height="match_parent">
        <com.google.android.material.appbar.CollapsingToolbarLayout android:id="@id/collapsing_app_bar" android:background="@color/colorBg" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <androidx.appcompat.widget.Toolbar android:layout_gravity="bottom" android:id="@id/toolbar" android:background="@color/colorBg" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_collapseMode="pin">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/collapsed_title_frame" android:layout_width="match_parent" android:layout_height="match_parent">
                    <ImageView android:id="@id/collapsed_app_icon" android:layout_width="32.0dp" android:layout_height="32.0dp" android:src="@mipmap/goodlock_icon" android:layout_marginEnd="8.0dp" />
                    <TextView android:textSize="18.0dp" android:textColor="@color/colorAboutTitle" android:id="@id/collapsed_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Good Lock" android:singleLine="true" android:fontFamily="sans-serif" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <FrameLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/title_frame" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
                <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center_horizontal" android:id="@id/app_icon" android:visibility="gone" android:layout_width="50.0dp" android:layout_height="50.0dp" android:layout_marginBottom="8.0dp" android:src="@mipmap/goodlock_icon" />
                    <TextView android:textSize="38.0dp" android:textColor="@color/colorAboutTitle" android:layout_gravity="center_horizontal" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dp" android:text="Good Lock" android:fontFamily="sans-serif-light" />
                </LinearLayout>
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:orientation="vertical" android:id="@id/dev_members_frame" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="24.0dp">
            <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@id/footer" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="12.0dp" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/thanks_to" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:text="test" android:textAlignment="center" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorAboutComment" android:layout_gravity="center_horizontal" android:id="@id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="V 4.1.01.15" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/add_review" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_review" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/contact_us" android:visibility="visible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_us" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/osl" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/open_source_license" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/terms" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/terms_short" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/privacy" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/privacy_policy" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
                <TextView android:textSize="12.0dp" android:textStyle="normal" android:textColor="@color/colorCategory" android:layout_gravity="center_horizontal" android:id="@id/withdraw" android:visibility="gone" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dp" android:text="@string/withdraw_consent" android:fontFamily="sans-serif" android:paddingVertical="4.0dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
