<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:id="@id/scroll" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:orientation="vertical" android:clipToPadding="false" android:layout_width="@dimen/fragment_max_width" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <com.samsung.android.goodlock.terrace.view.TickerView android:id="@id/sns_ticker" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="13.0dp" android:paddingHorizontal="15.0dp" />
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_round_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:paddingVertical="15.0dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/notice_title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="15.0dp">
                    <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/ic_outline_home" android:tint="@color/colorTitle" android:layout_marginEnd="10.0dp" />
                    <TextView android:textSize="20.0dp" android:textColor="@color/colorTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/notice" android:layout_weight="1.0" android:textAlignment="viewStart" />
                    <include android:id="@id/more_notice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dp" app:layout_constraintEnd_toEndOf="parent" layout="@layout/terrace_post_more_item" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView android:id="@id/notice_list" android:layout_width="match_parent" android:layout_height="wrap_content" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_round_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:paddingVertical="15.0dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/progress_title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="15.0dp">
                    <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/ic_outline_event_available" android:tint="@color/colorTitle" android:layout_marginEnd="10.0dp" />
                    <TextView android:textSize="20.0dp" android:textColor="@color/colorTitle" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/progress" android:layout_weight="1.0" android:textAlignment="viewStart" />
                    <include android:id="@id/more_progress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dp" app:layout_constraintEnd_toEndOf="parent" layout="@layout/terrace_post_more_item" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView android:id="@id/progress_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_round_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:paddingVertical="15.0dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/tips_title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="15.0dp">
                    <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/outline_tips_and_updates_black_48" android:tint="@color/colorTitle" android:layout_marginEnd="10.0dp" />
                    <TextView android:textSize="20.0dp" android:textColor="@color/colorTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/tips" android:layout_weight="1.0" android:textAlignment="viewStart" />
                    <include android:id="@id/more_notice" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dp" app:layout_constraintEnd_toEndOf="parent" layout="@layout/terrace_post_more_item" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView android:id="@id/tips_list" android:layout_width="match_parent" android:layout_height="wrap_content" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_round_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:paddingVertical="15.0dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/suggestion_title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="15.0dp">
                    <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/ic_outline_thumb_up" android:tint="@color/colorTitle" android:layout_marginEnd="10.0dp" />
                    <TextView android:textSize="20.0dp" android:textColor="@color/colorTitle" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/poll" android:layout_weight="1.0" android:textAlignment="viewStart" />
                    <include android:id="@id/more_poll" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dp" app:layout_constraintEnd_toEndOf="parent" layout="@layout/terrace_post_more_item" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView android:id="@id/poll_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:background="@drawable/shape_round_rect" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dp" android:paddingVertical="15.0dp">
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/diary_title_bar" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="15.0dp">
                    <ImageView android:layout_width="28.0dp" android:layout_height="28.0dp" android:src="@drawable/outline_note_alt_24" android:tint="@color/colorTitle" android:layout_marginEnd="10.0dp" />
                    <TextView android:textSize="20.0dp" android:textColor="@color/colorTitle" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/diary" android:layout_weight="1.0" android:textAlignment="viewStart" />
                    <include android:id="@id/more_diary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="20.0dp" app:layout_constraintEnd_toEndOf="parent" layout="@layout/terrace_post_more_item" />
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView android:id="@id/diary_list" android:layout_width="match_parent" android:layout_height="wrap_content" android:nestedScrollingEnabled="false" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
